--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,158 +172,158 @@ jobs:
             serverless deploy
 workflows:
   version: 2.1
-  shared-go-lambda:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/lambda
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/lambda
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/lambda
-          requires:
-            - vendor
-  shared-go-log:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/log
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/log
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/log
-          requires:
-            - vendor
-  shared-go-mongodb:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/mongodb
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/mongodb
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/mongodb
-          requires:
-            - vendor
-  shared-go-idempotency:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/idempotency
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/idempotency
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: shared/go/idempotency
-          requires:
-            - vendor
-  data-storer:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: services/data-storer
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: services/data-storer
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: services/data-storer
-          requires:
-            - vendor
-  trader:
-    jobs:
-      - checkout-code
-      - vendor:
-          docker_image: cimg/go:1.14
-          service_path: services/trader
-          dependency_file: go.sum
-          dependencies_location: /go/pkg/mod
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/go:1.14
-          service_path: services/trader
-          requires:
-            - vendor
-      - integration:
-          docker_image: cimg/go:1.14
-          service_path: services/trader
-          requires:
-            - vendor
-  shared-java-idempotency:
-    jobs:
-      - checkout-code
-      - unit:
-          docker_image: cimg/openjdk:11.0
-          service_path: shared/java/idempotency
-          requires:
-            - checkout-code
-      - integration:
-          docker_image: cimg/openjdk:11.0
-          service_path: shared/java/idempotency
-          requires:
-            - checkout-code
-  receipt-emailer:
-    jobs:
-      - checkout-code
-      - build:
-          name: build-java-idempotency
-          docker_image: cimg/openjdk:11.0
-          service_path: shared/java/idempotency
-          requires:
-            - checkout-code
-      - unit:
-          docker_image: cimg/openjdk:11.0
-          service_path: services/receipt-emailer
-          requires:
-            - build-java-idempotency
-      - integration:
-          docker_image: cimg/openjdk:11.0
-          service_path: services/receipt-emailer
-          requires:
-            - build-java-idempotency
+#  shared-go-lambda:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/lambda
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/lambda
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/lambda
+#          requires:
+#            - vendor
+#  shared-go-log:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/log
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/log
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/log
+#          requires:
+#            - vendor
+#  shared-go-mongodb:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/mongodb
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/mongodb
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/mongodb
+#          requires:
+#            - vendor
+#  shared-go-idempotency:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/idempotency
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/idempotency
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: shared/go/idempotency
+#          requires:
+#            - vendor
+#  data-storer:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: services/data-storer
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: services/data-storer
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: services/data-storer
+#          requires:
+#            - vendor
+#  trader:
+#    jobs:
+#      - checkout-code
+#      - vendor:
+#          docker_image: cimg/go:1.14
+#          service_path: services/trader
+#          dependency_file: go.sum
+#          dependencies_location: /go/pkg/mod
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/go:1.14
+#          service_path: services/trader
+#          requires:
+#            - vendor
+#      - integration:
+#          docker_image: cimg/go:1.14
+#          service_path: services/trader
+#          requires:
+#            - vendor
+#  shared-java-idempotency:
+#    jobs:
+#      - checkout-code
+#      - unit:
+#          docker_image: cimg/openjdk:11.0
+#          service_path: shared/java/idempotency
+#          requires:
+#            - checkout-code
+#      - integration:
+#          docker_image: cimg/openjdk:11.0
+#          service_path: shared/java/idempotency
+#          requires:
+#            - checkout-code
+#  receipt-emailer:
+#    jobs:
+#      - checkout-code
+#      - build:
+#          name: build-java-idempotency
+#          docker_image: cimg/openjdk:11.0
+#          service_path: shared/java/idempotency
+#          requires:
+#            - checkout-code
+#      - unit:
+#          docker_image: cimg/openjdk:11.0
+#          service_path: services/receipt-emailer
+#          requires:
+#            - build-java-idempotency
+#      - integration:
+#          docker_image: cimg/openjdk:11.0
+#          service_path: services/receipt-emailer
+#          requires:
+#            - build-java-idempotency
   deploy-functions:
     jobs:
       - checkout-code:
