--- a/services/trade-decider/requirements.txt
+++ b/services/trade-decider/requirements.txt
@@ -1,4 +1,12 @@
-botocore
-boto3
+boto3==1.14.16
+botocore==1.17.16
+docutils==0.15.2
+jmespath==0.10.0
+numpy==1.19.0
+pandas==1.0.5
+python-dateutil==2.8.1
+pytz==2020.1
+s3transfer==0.3.3
+six==1.15.0
+urllib3==1.25.9
 uuid==1.30
-pandas==1.0.3
