--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/node:8.10
+      - image: circleci/node:latest
       - image: circleci/python:3.8.2
     steps:
       - attach_workspace:
