--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: kripto
 custom:
   secrets: ${file(secrets.json)}
   pythonRequirements:
-    dockerizePip: non-linux
+    dockerizePip: true
     useDownloadCache: false
     useStaticCache: false
     pythonBin: /usr/bin/python3
