--- a/serverless/resources.yml
+++ b/serverless/resources.yml
@@ -1,13 +1,4 @@
 Resources:
-#  RateUpdate:
-#    Type: "AWS::SQS::Queue"
-#    Properties:
-#      QueueName: "RateUpdate"
-#  Trade:
-#    Type: "AWS::SQS::Queue"
-#    Properties:
-#      QueueName: "Trade"
-
   #############
   #TRADE EVENT#
   #############
@@ -131,21 +122,21 @@ Resources:
     Properties:
       QueueName: "StoreRateDLQ"
   # Create our 'initiateTradeQueue' SQS queue
-  initiateTradeQueue:
-    Type: "AWS::SQS::Queue"
-    Properties:
-      QueueName: "InitiateTrade"
-      VisibilityTimeout: 120
-      RedrivePolicy:
-        deadLetterTargetArn: !GetAtt
-          - initiateTradeQueueDLQ
-          - Arn
-        maxReceiveCount: 3
+#  initiateTradeQueue:
+#    Type: "AWS::SQS::Queue"
+#    Properties:
+#      QueueName: "InitiateTrade"
+#      VisibilityTimeout: 120
+#      RedrivePolicy:
+#        deadLetterTargetArn: !GetAtt
+#          - initiateTradeQueueDLQ
+#          - Arn
+#        maxReceiveCount: 3
   # Create our 'initiateTradeQueue' Dead Letter Queue SQS queue
-  initiateTradeQueueDLQ:
-    Type: AWS::SQS::Queue
-    Properties:
-      QueueName: "InitiateTradeDLQ"
+#  initiateTradeQueueDLQ:
+#    Type: AWS::SQS::Queue
+#    Properties:
+#      QueueName: "InitiateTradeDLQ"
   # Create our queue policy for the 'storeRateQueue'
   snsToStoreRateQueueSqsPolicy:
     Type: AWS::SQS::QueuePolicy
@@ -166,24 +157,24 @@ Resources:
       Queues:
         - Ref: storeRateQueue
   # Create our queue policy for the 'initiateTradeQueue'
-  snsToInitiateTradeQueueSqsPolicy:
-    Type: AWS::SQS::QueuePolicy
-    Properties:
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Sid: "allow-sns-messages"
-            Effect: Allow
-            Principal: "*"
-            Resource: !GetAtt
-              - initiateTradeQueue
-              - Arn
-            Action: "SQS:SendMessage"
-            Condition:
-              ArnEquals:
-                "aws:SourceArn": !Ref rateUpdateTopic
-      Queues:
-        - Ref: initiateTradeQueue
+#  snsToInitiateTradeQueueSqsPolicy:
+#    Type: AWS::SQS::QueuePolicy
+#    Properties:
+#      PolicyDocument:
+#        Version: "2012-10-17"
+#        Statement:
+#          - Sid: "allow-sns-messages"
+#            Effect: Allow
+#            Principal: "*"
+#            Resource: !GetAtt
+#              - initiateTradeQueue
+#              - Arn
+#            Action: "SQS:SendMessage"
+#            Condition:
+#              ArnEquals:
+#                "aws:SourceArn": !Ref rateUpdateTopic
+#      Queues:
+#        - Ref: initiateTradeQueue
   # Create the subscription to the 'storeRateQueue'
   storeRateQueueSubscription:
     Type: 'AWS::SNS::Subscription'
@@ -195,12 +186,12 @@ Resources:
       Protocol: sqs
       RawMessageDelivery: 'true'
   # Create the subscription to the 'initiateTradeQueue'
-  initiateTradeQueueSubscription:
-    Type: 'AWS::SNS::Subscription'
-    Properties:
-      TopicArn: !Ref rateUpdateTopic
-      Endpoint: !GetAtt
-        - initiateTradeQueue
-        - Arn
-      Protocol: sqs
-      RawMessageDelivery: 'true'
+#  initiateTradeQueueSubscription:
+#    Type: 'AWS::SNS::Subscription'
+#    Properties:
+#      TopicArn: !Ref rateUpdateTopic
+#      Endpoint: !GetAtt
+#        - initiateTradeQueue
+#        - Arn
+#      Protocol: sqs
+#      RawMessageDelivery: 'true'
