--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,16 +372,16 @@ workflows:
             branches:
               only:
                 - master
-      - build:
-          name: build-java-idempotency
-          docker_image: cimg/openjdk:11.0
-          service_path: shared/java/idempotency
-          requires:
-            - build-rate-retriever
-          filters:
-            branches:
-              only:
-                - master
+#      - build:
+#          name: build-java-idempotency
+#          docker_image: cimg/openjdk:11.0
+#          service_path: shared/java/idempotency
+#          requires:
+#            - build-rate-retriever
+#          filters:
+#            branches:
+#              only:
+#                - master
       - build:
           name: build-receipt-emailer
           docker_image: cimg/openjdk:11.0
