--- a/serverless.yml
+++ b/serverless.yml
@@ -174,7 +174,7 @@ functions:
       RECEIPT_RECIPIENT: chris_shepherd2@hotmail.com
       MONGO_URI: ${self:custom.secrets.mongoUri}
     package:
-      artifact: services/receipt-emailer/build/libs/receipt-emailer-1.0.0.jar
+      artifact: bazel-bin/services/receipt-emailer/receipt_emailer.jar
     reservedConcurrency: 1
     events:
       - sqs:
