--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -387,7 +387,7 @@ workflows:
           docker_image: cimg/openjdk:11.0
           service_path: services/receipt-emailer
           requires:
-            - build-java-idempotency
+            - build-rate-retriever
           filters:
             branches:
               only:
