--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -9,7 +9,7 @@ vendor:
 	. env/bin/activate
 	python3.7 -m pip install boto3
 	python3.7 -m pip install botocore
-	python3.7 -m pip install pandas
+	python3.7 -m pip install pandas==0.19.0
 	python3.7 -m pip freeze > requirements.txt
 
 build:
@@ -20,5 +20,5 @@ build:
 	. env/bin/activate
 	python3.7 -m pip install boto3
 	python3.7 -m pip install botocore
-	python3.7 -m pip install pandas
+	python3.7 -m pip install pandas==0.19.0
 	python3.7 -m pip freeze > requirements.txt
