--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:latest
-      - image: circleci/python:3.7.7
+      - image: amazonlinux
     steps:
       - attach_workspace:
           at: .
@@ -157,12 +157,12 @@ jobs:
             "${COINBASE_PRO_SANDBOX_KEY}" "${COINBASE_PRO_SANDBOX_PASSPHRASE}" "${COINBASE_PRO_SANDBOX_SECRET}" \
             "${AWS_ACCOUNT_ID}" "${LUMIGO_TOKEN}" "${SEND_GRID_API_KEY}" > secrets.json
 
-      - run:
-          name: Install pip
-          command: |
-            sudo apt update
-            sudo apt install python3-pip
-            sudo pip3 install --upgrade pip
+#      - run:
+#          name: Install pip
+#          command: |
+#            sudo apt update
+#            sudo apt install python3-pip
+#            sudo pip3 install --upgrade pip
 
       - run:
           name: Install Serverless CLI, Configure Profile, Deploy
@@ -334,7 +334,7 @@ workflows:
                 - master
       - build:
           name: build-trade-decider
-          docker_image: circleci/python:3.7.7
+          docker_image: amazonlinux
           service_path: services/trade-decider
           requires:
             - checkout-code
