--- a/services/trade-decider/Makefile
+++ b/services/trade-decider/Makefile
@@ -28,6 +28,7 @@
 default: build
 
 vendor:
+	apt-get install sudo -y
 	sudo apt update
 	sudo apt install python3-pip
 	sudo pip install virtualenv
@@ -40,6 +41,7 @@ vendor:
 	#pip freeze > requirements.txt
 
 build:
+	apt-get install sudo -y
 	sudo apt update
 	sudo apt install python3-pip
 	sudo pip install virtualenv
