--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:latest
+      - image: circleci/python:3.7.7
     steps:
       - attach_workspace:
           at: .
@@ -155,6 +156,13 @@ jobs:
             "${COINBASE_PRO_KEY}" "${COINBASE_PRO_PASSPHRASE}" "${COINBASE_PRO_SECRET}" \
             "${COINBASE_PRO_SANDBOX_KEY}" "${COINBASE_PRO_SANDBOX_PASSPHRASE}" "${COINBASE_PRO_SANDBOX_SECRET}" \
             "${AWS_ACCOUNT_ID}" "${LUMIGO_TOKEN}" "${SEND_GRID_API_KEY}" > secrets.json
+
+      - run:
+          name: Install pip
+          command: |
+            sudo apt update
+            sudo apt install python3-pip
+            sudo pip3 install --upgrade pip
 
       - run:
           name: Install Serverless CLI, Configure Profile, Deploy
