--- a/services/receipt-emailer/Makefile
+++ b/services/receipt-emailer/Makefile
@@ -2,11 +2,12 @@
 default: build
 
 build:
-	sudo apt install curl gnupg
-	curl https://bazel.build/bazel-release.pub.gpg | sudo apt-key add -
-	echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
-	sudo apt update && sudo apt install bazel
-	bazel build ...
+	./gradlew build
+#	sudo apt install curl gnupg
+#	curl https://bazel.build/bazel-release.pub.gpg | sudo apt-key add -
+#	echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
+#	sudo apt update && sudo apt install bazel
+#	bazel build ...
 
 vendor:
 	./gradlew dependencies
