update python module

--- a/serverless.yml
+++ b/serverless.yml
@@ -133,6 +133,7 @@ functions:
     runtime: python3.7
     memorySize: 512
     timeout: 120
+    module: services/trade-decider
     handler: services/trade-decider/app.handler
     package:
       include:
